
= rufus-dollar CHANGELOG.txt


== rufus-dollar - 1.0.3    released 2010/12/22

- ${'key} and ${"key} produce '"value"'


== rufus-dollar - 1.0.2    released 2009/02/04

- code cleanup


== rufus-dollar - 1.0.1    released 2008/02/19

- bug   #18161 : problem with nested simple {} (not ${}). Fixed - s179


== rufus-dollar - 1.0    released 2008/01/24
